--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,19 @@
             <artifactId>pagehelper</artifactId>
             <version>4.1.1</version>
         </dependency>
+
+        <!-- swagger2 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
