--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.248.142:3306/sale?useUnicode=true&amp;characterEncoding=UTF-8
-    username: sale
-    password: csfdevyw123
+    url:
+    username:
+    password:
     driverClassName: com.mysql.jdbc.Driver
 
 mybatis:
@@ -16,6 +16,7 @@ mapper:
     mappers: com.crmww.sale.util.MyMapper
     not-empty: false
     identity: MYSQLs
+
 
 pagehelper:
     helperDialect: mysql
